2004-10-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-disc.c: (totem_disc_resolve_link), (get_device):
	* src/totem-disc.h: remove uses of gint and gchar, follow relative
	symlinks when checking for the real device name

2004-10-13  Bastien Nocera  <hadess@hadess.net>

	* README: Add basic telestrator instructions
	* src/Makefile.am:
	* src/totem-gromit.c: (totem_gromit_available), (launch),
	(gromit_exit), (gromit_timeout_cb), (totem_gromit_toggle),
	(totem_gromit_clear):
	* src/totem-gromit.h:
	* src/totem.c: (totem_action_exit), (totem_action_handle_key):
	Add a beta Telestrator mode, you need Gromit installed to use it

2004-10-13  Julien MOUTTE  <julien@moutte.net>

	* src/totem-pl-parser.c: (totem_pl_parser_base_url): Fix a crash when
	saving playlist of uri like http://

2004-10-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem-disc.c: (cd_cache_disc_is_vcd), (cd_cache_disc_is_dvd):
	Fix detection of DVDs without an AUDIO_TS directory (Closes: #155281),
	speed up the sub-dir checking in the DVD and VCD cases

============ Version 0.99.19

2004-10-13  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.99.19

2004-10-12  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2004-10-12  Bastien Nocera  <hadess@hadess.net>

	* src/.cvsignore: upd
	* src/totem-disc.c: (cd_cache_new): fix a crash trying to play the disc
	as gnome_vfs_volume_monitor_unref() because the volume monitor isn't
	refcounted (Closes: #155195)

2004-10-12  Bastien Nocera  <hadess@hadess.net>

	* src/egg-recent-model.c: (egg_recent_model_add_full):
	* src/egg-recent-util.c: (load_icon_file),
	(egg_recent_util_get_icon): updated egg-recent from libegg

============ Version 0.99.18

2004-10-11  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated
	* configure.in: 0.99.18
	* src/totem-disc.c: (cd_cache_open_device): use err as we set it

2004-10-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-disc.c: (cd_cache_open_device), (cd_cache_disc_is_vcd),